--- a/1Introduction.tex
+++ b/1Introduction.tex
@@ -82,14 +82,14 @@ Task Force & Project & Score (0-10)\\\hline
 1 & Exploration Working Group in Astroparticle Physics & 6\\
 1 & Exploration Working Group in Radioastronomy & 6\\
 1 & Massive Open Online Courses & 0 \\ 
-1-2-3 & Communitacion Network & 10\\
+1-2-3 & Communication Network & 10\\
 2  & Periodic Coordination Sessions & 2\\
 2 & Virtual Training Sessions & 2\\
 2 & Teaching Material for Visually Impaired Students & 6\\
-2 & Annual TF2 Meeting & 2\\
-3 & Development for planetariums & 0\\
+2 & Annual TF2 Meeting & 0\\
+3 & Development for planetariums & 2\\
 3 & Regional Communicating Astronomy with the Public & 2\\\hline
- & \textbf{Average} & 3.33\\ 
+ & \textbf{Average} & 3.5\\ 
 \end{tabular}
 \end{center}
 
