--- a/2TF1.tex
+++ b/2TF1.tex
@@ -217,19 +217,8 @@ These universities are:
 
 With the previous group of researchers, it was possible established a
 work network and began on a joint project that was presented to the
-National Spectrum Agency (ANE), this project was approved and is
-already in execution. As part of the participation from Chile, the
-participation of Professor Ricardo Bustos in the IX International
-Congress "Spectrum for sustainable development" organized by the ANE
-in September 2019 was achieved. In this participation, the network
-created and the work was commented on Future to develop in Colombia in
-the field of Radio astronomy. 
-
-Besides the participation of Professor Ricardo in the Congress, there
-was also participation of Professor Julián Rodríguez (UIS) who spoke
-among other things about political needs as a Country for the
-regulation of the use of the radio spectrum in the field of Radio
-Astronomy. 
+Colombian National Spectrum Agency (ANE), this project was approved and is
+already in execution. 
 
 
 
