--- a/3TF2.tex
+++ b/3TF2.tex
@@ -2,16 +2,22 @@
 \section{Task Force 2}
 \label{chapter3}
 
-Here was exposed the tasks acquired by the TF2, related with Astronomy for Children and Schools
+\subsection{Periodic coordination sessions}
+\textbf{Objective:} Strengthen communication strategies between
+teachers and coordinators from each country 
+\\
+\textbf{Leading ROAD Institution:} Parque EXPLORA (Colombia), IVIC
+(Venezuela). 
+\\
+\textbf{Lead:} Luz Angela Cubides, Angela Patricia Pérez, Enrique Torres.
+\\  
+\textbf{Implementation:} Hold bi-weekly coordination sessions. They
+have been held during 2014. 
 
-\subsection{Periodic coordination sessions - PCS}
-\textbf{Objective:} Strengthen communication strategies between teachers and coordinators from each country 
-\\
-\textbf{Leading ROAD Institution:} Parque EXPLORA (Colombia), IVIC (Venezuela).
-\\
-\textbf{Contact:} Luz Angela Cubides, Angela Patricia Pérez, Enrique Torres.
-\\
-\textbf{Implementation:} Hold bi-weekly coordination sessions. They have been held during 2014.
+\subsection{Results}
+The sessions were active the first months of the Andean ROAD. 
+They did not have continuity. 
+The biggest challenge was ...
 
 %#######################################################
 
@@ -19,16 +25,25 @@ Here was exposed the tasks acquired by the TF2, related with Astronomy for Child
 
 
 \subsection{Virtual training sessions - VTS}
-\textbf{Objective:} Create virtual training and activities open to teachers and students.
+\textbf{Objective:} Create virtual training and activities open to
+teachers and students. 
 \\
 \textbf{Leading ROAD Institution:} IVIC (Venezuela).
 \\
-\textbf{Contact:} Enrique Torres, Juan Carlos Arias.
+\textbf{Lead:} Enrique Torres, Juan Carlos Arias.
 \\
-\textbf{Implementation.} Develop a virtual platform to hold virtual workshops on information technologies applied to astronomy and space sciences.
+\textbf{Implementation.} Develop a virtual platform to hold virtual
+workshops on information technologies applied to astronomy and space
+sciences. 
 
 \subsubsection{Achievements}
-From the National Polytechnic School of Ecuador was reported the continuation of the courses NASE Coaque, Manabí, from 2nd to 6th Septemeber, 2019: Courses of Astronomy, the website of the course is \href{http://sac.csic.es/astrosecundaria/es/cursos/realizados/reglados/145_ecuador_2019/ListaDocs.php}{here}, the responsible is %\email{marcela.morillo@utc.edu.ec}.
+
+We held some meetings with the TF2 (Children and Schools) and TF3
+(Public Disclosure) working groups with representatives of the Andean
+ROAD. 
+These meetings did not have continuity after 2017.
+
+
 
 %#######################################################
 
@@ -41,22 +56,28 @@ From the National Polytechnic School of Ecuador was reported the continuation of
 \\
 \textbf{Contact:} Angela Patricia Perez, Dilia Gonzalez.
 \\
-\textbf{Implementation:} We start by doing research on the kind of material to develop. Later on we will define the production and distribution processes.
+\textbf{Implementation:} We start by doing research on the kind of
+material to develop. Later on we will define the production and
+distribution processes. 
+
+
+\subsubsection{Achievements}
 
 %#######################################################
 
 
-\subsection{Annual TF2 meeting - ATF2M}
+\subsection{Annual TF2 meeting}
 \textbf{Objective:} Organize and annual meeting to gather all the collaborators in the Task Force.
 \\
 \textbf{Leading ROAD Institution:} Changes every year.
 \\
-\textbf{Contact:} Maritza Arias Manriquez, Jonathan Moncada, Manuel de la Torre.
+\textbf{Lead:} Maritza Arias Manriquez, Jonathan Moncada, Manuel de la Torre.
 \\
 \textbf{Implementation:} Every year we will hold a meeting aimed at collaborators in the node. The venue will change every year. The first meeting will take place in 2015 with the theme Archeoastronomy.
 
 \subsubsection{Achievements}
 
-Participation in virtual (monthly) regular meetings with the TF2 (Children and Schools) and TF3 (Public Disclosure) working groups with representatives of the Node. Formalization as representative of the TF3 area, for everything related to the coordination of this TF. These meetings were made with the participation of Farid Char.
+The project did not make any significant progress towards reaching its
+objective.
 
 %---------The scope of this chapter
