--- a/4TF3.tex
+++ b/4TF3.tex
@@ -20,10 +20,9 @@ We only succeded to perform initial contacts.
 We did not manage to develop the special shows.
 
 
-Representatives of Parque Explora (Medellín, Colombia) got in touch with chilean colleages to develop ideas to create shows for planetariums in the Andean region.
-There was a plan to implement a pilot plan in 2017-2018 for a digital planetarium to be located in San Pedro de Atacama.
+Representatives of Parque Explora (Medellín, Colombia) got in touch with chilean colleages to develop ideas to create shows for planetariums in the Andean region. There was a plan to implement a pilot plan in 2017-2018 for a digital planetarium to be located in San Pedro de Atacama.
 Unfortunately this did not came to fruition.
-The National Polytechnic School in Quito had a initial approach with Planetarium in Quito.
+The National Polytechnic School in Quito had a initial approach with Planetarium in Quito. 
 
 \subsection{Communicating astronomy with the public}
 \textbf{Objective:} Organize periodic meetings to gather all the collaborators in the Task Force, "Communicating Astronomy with the Public”.
@@ -35,7 +34,7 @@ The National Polytechnic School in Quito had a initial approach with Planetarium
 held parallel to large professional meetings. We envision this event as a ”Communicating Astronomy with the Public” meeting for the region. We expect to hold the first one during the next Latin-American Regional IAU Meeting in 2016.
 
 
-\subsubsection{Results}
+\subsubsection{Achievements}
 We implemented a one-afternoon mini-worskshop during the Latin-American Regional IAU Meeting in 2016.
 Parque Explore hosted the Communicating Astronomy with the Public meeting in 2016. Colleagues from the Andean ROAD attended,
-but we did not manage to stablish a similar regular meeting for the Andean Region.
+but we did not manage to stablish a similar regular meeting for the Andean Region. 
