--- a/5TFX.tex
+++ b/5TFX.tex
@@ -1,83 +1,6 @@
 \newpage
 \section{Other Achievements}
 
-\textbf{Farid Char,  Coordinator of Outreach Centro de Astronomía, U. de Antofagasta.}
-
 \begin{itemize}
-    \item Participation in 1st Face-to-Face Meeting with representatives of OAD Regional Offices in Cape Town, South Africa (January 2015).
-
-    \item Participation in quarterly virtual meetings with representatives of OAD Regional Offices for updates, news and future actions.
-
-    \item Preparation of 2 educational proposals for Call for Proposals OAD 2015 (1 standby proposal, “Wish list”)
-
-    \item Participation in the 1st Chile-US Summit on Astronomy Education (oral presentation and poster on the Node), in Santiago and San Pedro de Atacama, March 2015.
-
-    \item Establishment of work networks and contact with representatives of American universities to explore collaborations with Latin American communities (U. Arizona, Green Bank Observatory).
-
-    \item Participation in the 2nd Astronomy Workshop in the Andes (talk about astronomy in Chile and postulation of the country as the headquarters of the IAU General Assembly in 2021), and Chilean representation in the signing of the agreement to create the Andean Node in Bogotá, Colombia , July 2015.
-
-    \item Strategic contact with the Regional Unit of International Affairs (UREA) of the GORE Antofagasta, to develop activities and presentations that allow to know the Andean Node in countries that integrate the Node (in principle, ZICOSUR countries).
-
-    \item Participation in the Science and Technology Commission of the Integration Committee between the Northeast of Argentina and the North of Chile, to publicize the Node and explore alternative activities that integrate ZICOSUR countries, in Iquique, August 2015.
-
-    \item Participation in the 58th Annual Meeting of the Argentine Astronomy Association, where they participated in conversations with representatives of the AAA (equivalent to SOCHIAS of Argentina), to integrate as an active country to the Andean Node, in La Plata, September 2015.
-
-    \item Participation in the IAU General Assembly and participation in the OAD working group, through the award of an IAU scholarship (poster presentation and oral presentation), in Honolulu, USA, August 2015.
-
-    \item Integration to 3 Working Groups of IAU Commissions to strengthen participation of institutions and visibility of Latin American initiatives (C2 WG CAP Journal, C1 WG Network for Astronomy School Education (NASE) and C2 WG Outreach Professionalization \& Accreditation), August 2015.
-
-    \item Strategic contact with initiative UAbierta of the U. of Chile, to explore requirements in giving a Massive Online Open Course (MOOC) on general astronomy open to participants from South America, with emphasis on Node countries, January 2016.
-
-    \item Online contributions to generate the OAD Business Plan for 2016-2021, together with representatives of other OAD Regional Offices, February 2016.
-
-    \item Participation in the 2nd Chile-US Summit on Astronomy Education (integration to the Roadmap document editor team) in La Serena, March 2016.
-
-    \item Sending a proposal on behalf of the Andean Node for financing a NASE school in Chile to the Gemini Fund 2016 (not selected). - Strategic contacts with Latin American institutions and teachers, to probe expressions of interest in using NOAO Quality Lightning Teaching Kits obtained by the Andean Node, to measure the conditions of light pollution in different countries of the Node, April 2016.
-
-    \item Strategic contacts with teachers and Latin American institutions, in order to coordinate joint activities for the observation of the transit of Mercury, May 2016.
-
-    \item Participation in the Communicating Astronomy with the Public event (CAP 2016) in Medellín, Colombia (May 2016).
-
-    \item Participation in a working table with representatives of National Olympics in different countries of the Node, to explore strategies together to improve the Latin American Astronomy Olympics and optimize the level of the participants in each edition, as well as take ideas applicable to the Olympics in Chile , during the CAP2016 event.
-
-    \item Preparation of 2 educational proposals for Call for Proposals OAD 2016 (not selected), July 2016.
-
-    \item Contact with a group of Uruguayan teachers who ask for guidance and ideas on educational activities to be carried out with Chilean peers during a trip to Chile as a training instance; They are referred to the network of teachers in Chile and are followed up, September 2016.
-
-    \item Participation as part of the evaluation committee (pre-selection) for proposals sent to the OAD Call for Proposals, September 2016.
-
-    \item Strategic collaboration with a letter of commitment to contribute to the project "Uniting Chile, Latin America and the world through Astro-Engineering" for an Astro-Engineering School in the University of Chile, September 2016.
-
-    \item Establishment of work networks to develop educational materials with representatives of UNAWE and Planetarium of Medellín, since May 2016 (in preparation).
-
-    \item Development of an intervention plan for the Astronomy Olympics in Chile, so that SOCHIAS takes full administration of this event, October 2016.
-
-    \item Administration of the Astronomy Olympics in Chile 2017, through the coordination of its 2 stages: Regional Olympiad, virtual (already made in March 2017), and National Olympiad, to be held in person in September 2017.
-
-    \item Preparation of 3 educational proposals for Call for Proposals OAD 2017 (sent March 2017, awaiting response).
-
-    \item Pre-registration to participate as an exhibitor in the Communicating Astronomy with the Public event (CAP 2018) and travel grant application. Fukuoka, Japan (next, March 2018).
-
-    \item Pre-registration to participate as an exhibitor at the 3rd Chile-USA Summit. on Education in Astronomy (oral presentation), in Santiago (next, August 2017).
-
-    \item Application to participate as an exhibitor (oral presentation) in the ITCA NARIT Colloquium, “Astronomy for STEM Education” that selects 100 astronomy educators worldwide, and includes OAD participation in its program of activities. Bangkok, Thailand (next, August 2017).
-
-    \item Participation as part of the evaluation committee (pre-selection) for proposals sent to the OAD Call for Proposals, July 2017.
-\end{itemize}    
-\newpage
-
-\textbf{ Giovanny Cardona UDistrital}
-
-From the Distrital University in Bogotá Colombia se ha apoyado estos eventos realizado publicaciones y concluido tesis en Enseñanza de la Astronomía se dejan a consideración si pueden ser parte del informe
-IX Congreso Nacional de Enseñanza de la Física y la Astronomía
-El 9 CONGRESO NACIONAL DE ENSEÑANZA DE LA FÍSICA Y LA ASTRONOMÍA es un espacio de encuentro para reflexionar sobre la Investigación en enseñanza de la Física y la Astronomía en Colombia, considerando las condiciones de diversidad cultural propias de los contextos en donde se desarrolla en diálogo con las perspectivas internacionales en esta materia. En el marco de este 9 Congreso, tendrá lugar el simposio: “Historiadoras de las ciencias aportes a la formación de Licenciados en Física” escenario para la construcción de alternativas y fortalecimiento de los procesos de renovación de los programas de Licenciatura en Física.
-
-Este evento se celebra cada dos años y reúne docentes de física de todos los niveles educativos, investigadores en enseñanza de la física, entes gubernamentales y empresariales relacionados directamente con la educación; todos interesados en compartir, reflexionar y discutir en torno a propuestas, practicas, nuevos enfoques, estrategias y teorías de la problemática educativa de la enseñanza y el aprendizaje de la física, que se adelantan en los diferentes contextos educativos del país.
-En el 9 CNEF se manifiesta un variado espectro de opciones, reflexiones, propuestas, iniciativas, e investigaciones y cuenta con la participación de destacados invitados de orden nacional e internacional, que se constituyen en uno de los centros de interés de la dinámica académica que se vive durante su realización. Los logros, dificultades, obstáculos y elaboraciones de la comunidad permiten evidenciar líneas de investigación que definen y caracterizan la comunidad de educadores en física, a partir de fundamentos históricos y epistemológicos de la enseñanza, el aprendizaje y la didáctica de la física, así como también entrar a revisar los fundamentos de prácticas, procesos y metodologías de investigación.
-
-De esta forma, cada participante encuentra opciones para cambiar, contextualizar y transformar la forma de ver el mundo del aula desde la física y los fenómenos que se presentan en ella; esencia fundamental de la comunidad de profesionales en docencia de la física.
-En el marco de esta versión del Congreso, tendrá lugar el simposio: “Historiadoras de las ciencias aportes a la formación de Licenciados en Física”, como escenario para la construcción de alternativas y fortalecimiento de los procesos de renovación de los programas de Licenciatura en Física.
-FECHA:Noviembre 7, 8 y 9 de 2018
-Lugar: Universidad Antonio Nariño. Sede Nicolás de Federmán. Calle 58 A \#37-94 Bogotá, Colombia
-CONVOCAN: Asociación Colombiana de Profesores de Física-ZEMAKAITA, Universidad Distrital Francisco José de Caldas, Universidad Pedagógica Nacional
-APOYAN: Universidad Antonio Nariño, Universidad de Nariño, Universidad del Valle, Universidad Nacional de Salta-Argentina, Red de profesores del Distrito Capital. Nodo de Ciencias y Matemáticas, Secretaria de Educación de Cundinamarca, Secretaria de Educación de Bogotá.
+\item 
+\end{itemize}
