--- a/7Summary.tex
+++ b/7Summary.tex
@@ -1,119 +1,2 @@
 \newpage
-\section{Summary}
-% Please add the following required packages to your document preamble:
-% \usepackage{multirow}
-\begin{table}[H]
-\resizebox{\linewidth}{!}{
-\begin{tabular}{cccccc}
-\hline
-Task Force & Tasks & Responsible & Institution & Country & Email \\ \hline
-\multicolumn{1}{|c|}{TF1} & \multicolumn{1}{c|}{\multirow{5}{*}{Massive Open Online Courses}} & \multicolumn{1}{c|}{Farid Char} & \multicolumn{1}{c|}{Universidad de Antofagasta} & \multicolumn{1}{c|}{Chile} & \multicolumn{1}{c|}{farid.char@uantof.cl} \\ \cline{1-1} \cline{3-6} 
-\multicolumn{1}{c|}{} & \multicolumn{1}{c|}{} & \multicolumn{1}{c|}{Luis Nuñez} & \multicolumn{1}{c|}{Universidad Industrial de Santander} & \multicolumn{1}{c|}{Colombia} & \multicolumn{1}{c|}{lnunez@uis.edu.co} \\ \cline{3-6} 
-\multicolumn{1}{c|}{} & \multicolumn{1}{c|}{} & \multicolumn{1}{c|}{Nicolas Vásquez} & \multicolumn{1}{c|}{Escuela Politécnica Nacional} & \multicolumn{1}{c|}{Ecuador} & \multicolumn{1}{c|}{nicolas.vasquez@epn.edu.ec} \\ \cline{3-6} 
-\multicolumn{1}{c|}{} & \multicolumn{1}{c|}{} & \multicolumn{1}{c|}{Katherine Vieira} & \multicolumn{1}{c|}{Centro de Investigaciones de Astronomía (CIDA)} & \multicolumn{1}{c|}{Venezuela} & \multicolumn{1}{c|}{kathyvieira@gmail.com} \\ \cline{3-6} 
-\multicolumn{1}{c|}{} & \multicolumn{1}{c|}{} & \multicolumn{1}{c|}{Oscar Alberto Restrepo} & \multicolumn{1}{c|}{ECCI} & \multicolumn{1}{c|}{Colombia} & \multicolumn{1}{c|}{orestrepog@ecci.edu.co} \\ \cline{2-6} 
- &  &  &  &  &  \\ \hline
-\multicolumn{1}{|c|}{TF1} & \multicolumn{1}{c|}{\multirow{8}{*}{Andean School on Astronomy and Astrophysics}} & \multicolumn{1}{c|}{Rocio Guzman Saavedra} & \multicolumn{1}{c|}{Universidad Mayor de San Simon} & \multicolumn{1}{c|}{Bolivia} & \multicolumn{1}{c|}{rocioguzman.s@fcyt.umss.edu.bo} \\ \cline{1-1} \cline{3-6} 
-\multicolumn{1}{c|}{} & \multicolumn{1}{c|}{} & \multicolumn{1}{c|}{Marko Andrade Uzieda} & \multicolumn{1}{c|}{Universidad de San Andrés} & \multicolumn{1}{c|}{} & \multicolumn{1}{c|}{markoandrade.u@fcyt.umss.edu.bo} \\ \cline{3-6} 
-\multicolumn{1}{c|}{} & \multicolumn{1}{c|}{} & \multicolumn{1}{c|}{Oscar Alberto Restrepo} & \multicolumn{1}{c|}{ECCI} & \multicolumn{1}{c|}{Colombia} & \multicolumn{1}{c|}{orestrepog@ecci.edu.co} \\ \cline{3-6} 
-\multicolumn{1}{c|}{} & \multicolumn{1}{c|}{} & \multicolumn{1}{c|}{Juan Carlos Muñoz Cuartas} & \multicolumn{1}{c|}{Universidad de Antioquia} & \multicolumn{1}{c|}{Colombia} & \multicolumn{1}{c|}{juan.munozc@udea.edu.co} \\ \cline{3-6} 
-\multicolumn{1}{c|}{} & \multicolumn{1}{c|}{} & \multicolumn{1}{c|}{Nicolas Vásquez} & \multicolumn{1}{c|}{Escuela Politécnica Nacional} & \multicolumn{1}{c|}{Ecuador} & \multicolumn{1}{c|}{nicolas.vasquez@epn.edu.ec} \\ \cline{3-6} 
-\multicolumn{1}{c|}{} & \multicolumn{1}{c|}{} & \multicolumn{1}{c|}{Nobar Octavio Baella Pajuelo} & \multicolumn{1}{c|}{Instituto Geofísico del Perú} & \multicolumn{1}{c|}{Perú} & \multicolumn{1}{c|}{nobar.baella@gmail.com} \\ \cline{3-6} 
-\multicolumn{1}{c|}{} & \multicolumn{1}{c|}{} & \multicolumn{1}{c|}{María Isela Zevallos Herencia} & \multicolumn{1}{c|}{Universidad Nacional de Ingeniería} & \multicolumn{1}{c|}{Perú} & \multicolumn{1}{c|}{maria.isela.zevallos@gmail.com} \\ \cline{3-6} 
-\multicolumn{1}{c|}{} & \multicolumn{1}{c|}{} & \multicolumn{1}{c|}{Katherine Vieira} & \multicolumn{1}{c|}{Centro de Investigaciones de Astronomía (CIDA)} & \multicolumn{1}{c|}{Venezuela} & \multicolumn{1}{c|}{kathyvieira@gmail.com} \\ \cline{2-6} 
- &  &  &  &  &  \\ \hline
-\multicolumn{1}{|c|}{TF1} & \multicolumn{1}{c|}{\multirow{8}{*}{Exploration working group in Astroparticle Physics}} & \multicolumn{1}{c|}{Rocio Guzman Saavedra} & \multicolumn{1}{c|}{Universidad Mayor de San Simon} & \multicolumn{1}{c|}{Bolivia} & \multicolumn{1}{c|}{rocioguzman.s@fcyt.umss.edu.bo} \\ \cline{1-1} \cline{3-6} 
-\multicolumn{1}{c|}{} & \multicolumn{1}{c|}{} & \multicolumn{1}{c|}{Marko Andrade Uzieda} & \multicolumn{1}{c|}{Universidad de San Andrés} & \multicolumn{1}{c|}{} & \multicolumn{1}{c|}{markoandrade.u@fcyt.umss.edu.bo} \\ \cline{3-6} 
-\multicolumn{1}{c|}{} & \multicolumn{1}{c|}{} & \multicolumn{1}{c|}{Oscar Alberto Restrepo} & \multicolumn{1}{c|}{ECCI} & \multicolumn{1}{c|}{Colombia} & \multicolumn{1}{c|}{orestrepog@ecci.edu.co} \\ \cline{3-6} 
-\multicolumn{1}{c|}{} & \multicolumn{1}{c|}{} & \multicolumn{1}{c|}{Giovanni Cardona Rodríguez} & \multicolumn{1}{c|}{Universidad Distrital Francisco José de Caldas} & \multicolumn{1}{c|}{Colombia} & \multicolumn{1}{c|}{gicardona@hotmail.com} \\ \cline{3-6} 
-\multicolumn{1}{c|}{} & \multicolumn{1}{c|}{} & \multicolumn{1}{c|}{Luis Nuñez} & \multicolumn{1}{c|}{Universidad Industrial de Santander} & \multicolumn{1}{c|}{Colombia} & \multicolumn{1}{c|}{lnunez@uis.edu.co} \\ \cline{3-6} 
-\multicolumn{1}{c|}{} & \multicolumn{1}{c|}{} & \multicolumn{1}{c|}{César Alonso Valenzuela Toledo} & \multicolumn{1}{c|}{Universidad del Valle} & \multicolumn{1}{c|}{Colombia} & \multicolumn{1}{c|}{cesar.valenzuela@correounivalle.edu.co} \\ \cline{3-6} 
-\multicolumn{1}{c|}{} & \multicolumn{1}{c|}{} & \multicolumn{1}{c|}{Nicolas Vásquez} & \multicolumn{1}{c|}{Escuela Politécnica Nacional} & \multicolumn{1}{c|}{Ecuador} & \multicolumn{1}{c|}{nicolas.vasquez@epn.edu.ec} \\ \cline{3-6} 
-\multicolumn{1}{c|}{} & \multicolumn{1}{c|}{} & \multicolumn{1}{c|}{Dennis Cazar Ramírez} & \multicolumn{1}{c|}{Universidad San Francisco de Quito} & \multicolumn{1}{c|}{Ecuador} & \multicolumn{1}{c|}{dcazar@usfq.edu.ec} \\ \cline{2-6} 
- &  &  &  &  &  \\ \hline
-\multicolumn{1}{|c|}{TF1} & \multicolumn{1}{c|}{\multirow{9}{*}{Andean Graduate Program}} & \multicolumn{1}{c|}{Oscar Alberto Restrepo} & \multicolumn{1}{c|}{ECCI} & \multicolumn{1}{c|}{Colombia} & \multicolumn{1}{c|}{orestrepog@ecci.edu.co} \\ \cline{1-1} \cline{3-6} 
-\multicolumn{1}{c|}{} & \multicolumn{1}{c|}{} & \multicolumn{1}{c|}{Giovanni Pinzón Estrada} & \multicolumn{1}{c|}{Universidad Nacional de Colombia} & \multicolumn{1}{c|}{Colombia} & \multicolumn{1}{c|}{gapinzone@unal.edu.co} \\ \cline{3-6} 
-\multicolumn{1}{c|}{} & \multicolumn{1}{c|}{} & \multicolumn{1}{c|}{Luis Nuñez} & \multicolumn{1}{c|}{Universidad Industrial de Santander} & \multicolumn{1}{c|}{Colombia} & \multicolumn{1}{c|}{lnunez@uis.edu.co} \\ \cline{3-6} 
-\multicolumn{1}{c|}{} & \multicolumn{1}{c|}{} & \multicolumn{1}{c|}{Juan Carlos Muñoz Cuartas} & \multicolumn{1}{c|}{Universidad de Antioquia} & \multicolumn{1}{c|}{Colombia} & \multicolumn{1}{c|}{juan.munozc@udea.edu.co} \\ \cline{3-6} 
-\multicolumn{1}{c|}{} & \multicolumn{1}{c|}{} & \multicolumn{1}{c|}{Nicolas Vásquez} & \multicolumn{1}{c|}{Escuela Politécnica Nacional} & \multicolumn{1}{c|}{Ecuador} & \multicolumn{1}{c|}{nicolas.vasquez@epn.edu.ec} \\ \cline{3-6} 
-\multicolumn{1}{c|}{} & \multicolumn{1}{c|}{} & \multicolumn{1}{c|}{Dennis Cazar Ramírez} & \multicolumn{1}{c|}{Universidad San Francisco de Quito} & \multicolumn{1}{c|}{Ecuador} & \multicolumn{1}{c|}{dcazar@usfq.edu.ec} \\ \cline{3-6} 
-\multicolumn{1}{c|}{} & \multicolumn{1}{c|}{} & \multicolumn{1}{c|}{Nobar Octavio Baella Pajuelo} & \multicolumn{1}{c|}{Instituto Geofísico del Perú} & \multicolumn{1}{c|}{Perú} & \multicolumn{1}{c|}{nobar.baella@gmail.com} \\ \cline{3-6} 
-\multicolumn{1}{c|}{} & \multicolumn{1}{c|}{} & \multicolumn{1}{c|}{María Isela Zevallos Herencia} & \multicolumn{1}{c|}{Universidad Nacional de Ingeniería} & \multicolumn{1}{c|}{Perú} & \multicolumn{1}{c|}{maria.isela.zevallos@gmail.com} \\ \cline{3-6} 
-\multicolumn{1}{c|}{} & \multicolumn{1}{c|}{} & \multicolumn{1}{c|}{Katherine Vieira} & \multicolumn{1}{c|}{Centro de Investigaciones de Astronomía (CIDA)} & \multicolumn{1}{c|}{Venezuela} & \multicolumn{1}{c|}{kathyvieira@gmail.com} \\ \cline{2-6} 
- &  &  &  &  &  \\ \hline
-\multicolumn{1}{|c|}{TF1} & \multicolumn{1}{c|}{\multirow{2}{*}{Exploration Working Group in Radioastronomy}} & \multicolumn{1}{c|}{Oscar Alberto Restrepo} & \multicolumn{1}{c|}{ECCI} & \multicolumn{1}{c|}{Colombia} & \multicolumn{1}{c|}{orestrepog@ecci.edu.co} \\ \cline{1-1} \cline{3-6} 
-\multicolumn{1}{c|}{} & \multicolumn{1}{c|}{} & \multicolumn{1}{c|}{Nicolas Vásquez} & \multicolumn{1}{c|}{Escuela Politécnica Nacional} & \multicolumn{1}{c|}{Ecuador} & \multicolumn{1}{c|}{nicolas.vasquez@epn.edu.ec} \\ \cline{2-6} 
- &  &  &  &  &  \\ \hline
-\multicolumn{1}{|c|}{TF1} & \multicolumn{1}{c|}{\multirow{3}{*}{Communication  Network}} & \multicolumn{1}{c|}{Oscar Alberto Restrepo} & \multicolumn{1}{c|}{ECCI} & \multicolumn{1}{c|}{Colombia} & \multicolumn{1}{c|}{orestrepog@ecci.edu.co} \\ \cline{1-1} \cline{3-6} 
-\multicolumn{1}{c|}{} & \multicolumn{1}{c|}{} & \multicolumn{1}{c|}{Nobar Octavio Baella Pajuelo} & \multicolumn{1}{c|}{Instituto Geofísico del Perú} & \multicolumn{1}{c|}{Perú} & \multicolumn{1}{c|}{nobar.baella@gmail.com} \\ \cline{3-6} 
-\multicolumn{1}{c|}{} & \multicolumn{1}{c|}{} & \multicolumn{1}{c|}{María Isela Zevallos Herencia} & \multicolumn{1}{c|}{Universidad Nacional de Ingeniería} & \multicolumn{1}{c|}{Perú} & \multicolumn{1}{c|}{maria.isela.zevallos@gmail.com} \\ \cline{2-6} 
-\end{tabular}
-}
-\caption{}
-\label{tab:my-table}
-\end{table}
-
-
-\newpage
-% Please add the following required packages to your document preamble:
-% \usepackage{multirow}
-\begin{table}[H]
-\resizebox{\linewidth}{!}{
-\begin{tabular}{cccccc}
-\hline
-Task Force & Tasks & Responsible & Institution & Country & Email \\ \hline
-\multicolumn{1}{|c|}{TF2} & \multicolumn{1}{c|}{\multirow{6}{*}{Teaching material for visually impaired students}} & \multicolumn{1}{c|}{Alexander Bonilla Rivera} & \multicolumn{1}{c|}{Planetario de Bogotá} & \multicolumn{1}{c|}{Colombia} & \multicolumn{1}{c|}{alex.acidjazz@gmail.com} \\ \cline{1-1} \cline{3-6} 
-\multicolumn{1}{c|}{} & \multicolumn{1}{c|}{} & \multicolumn{1}{c|}{Germán Puerta} & \multicolumn{1}{c|}{} & \multicolumn{1}{c|}{} & \multicolumn{1}{c|}{gpuerta@astropuerta.com.co} \\ \cline{3-6} 
-\multicolumn{1}{c|}{} & \multicolumn{1}{c|}{} & \multicolumn{1}{c|}{Rocio Guzman Saavedra} & \multicolumn{1}{c|}{Universidad Mayor de San Simon} & \multicolumn{1}{c|}{Bolivia} & \multicolumn{1}{c|}{rocioguzman.s@fcyt.umss.edu.bo} \\ \cline{3-6} 
-\multicolumn{1}{c|}{} & \multicolumn{1}{c|}{} & \multicolumn{1}{c|}{Marko Andrade Uzieda} & \multicolumn{1}{c|}{Universidad de San Andrés} & \multicolumn{1}{c|}{} & \multicolumn{1}{c|}{markoandrade.u@fcyt.umss.edu.bo} \\ \cline{3-6} 
-\multicolumn{1}{c|}{} & \multicolumn{1}{c|}{} & \multicolumn{1}{c|}{Juan Carlos Cuervo} & \multicolumn{1}{c|}{Universidad Sergio Arboleda} & \multicolumn{1}{c|}{Colombia} & \multicolumn{1}{c|}{observatorio@usa.edu.co} \\ \cline{3-6} 
-\multicolumn{1}{c|}{} & \multicolumn{1}{c|}{} & \multicolumn{1}{c|}{Enrique Torres} & \multicolumn{1}{c|}{Instituto Venezolano de Investigaciones Científicas (IVIC)} & \multicolumn{1}{c|}{Venezuela} & \multicolumn{1}{c|}{ejtt1010@gmail.com} \\ \cline{2-6} 
- &  &  &  &  &  \\ \hline
-\multicolumn{1}{|c|}{TF2} & \multicolumn{1}{c|}{\multirow{5}{*}{Periodic coordination sessions}} & \multicolumn{1}{c|}{Alexander Bonilla Rivera} & \multicolumn{1}{c|}{Planetario de Bogotá} & \multicolumn{1}{c|}{Colombia} & \multicolumn{1}{c|}{alex.acidjazz@gmail.com} \\ \cline{1-1} \cline{3-6} 
-\multicolumn{1}{c|}{} & \multicolumn{1}{c|}{} & \multicolumn{1}{c|}{Germán Puerta} & \multicolumn{1}{c|}{} & \multicolumn{1}{c|}{} & \multicolumn{1}{c|}{gpuerta@astropuerta.com.co} \\ \cline{3-6} 
-\multicolumn{1}{c|}{} & \multicolumn{1}{c|}{} & \multicolumn{1}{c|}{Juan Carlos Cuervo} & \multicolumn{1}{c|}{Universidad Sergio Arboleda} & \multicolumn{1}{c|}{Colombia} & \multicolumn{1}{c|}{observatorio@usa.edu.co} \\ \cline{3-6} 
-\multicolumn{1}{c|}{} & \multicolumn{1}{c|}{} & \multicolumn{1}{c|}{Enrique Torres} & \multicolumn{1}{c|}{Instituto Venezolano de Investigaciones Científicas (IVIC)} & \multicolumn{1}{c|}{Venezuela} & \multicolumn{1}{c|}{ejtt1010@gmail.com} \\ \cline{3-6} 
-\multicolumn{1}{c|}{} & \multicolumn{1}{c|}{} & \multicolumn{1}{c|}{Angela Pérez} & \multicolumn{1}{c|}{Parque Explora} & \multicolumn{1}{c|}{Colombia} & \multicolumn{1}{c|}{angela.perez@parqueexplora.org} \\ \cline{2-6} 
- &  &  &  &  &  \\ \hline
-\multicolumn{1}{|c|}{TF2} & \multicolumn{1}{c|}{\multirow{5}{*}{Virtual training sessions}} & \multicolumn{1}{c|}{Alexander Bonilla Rivera} & \multicolumn{1}{c|}{Planetario de Bogotá} & \multicolumn{1}{c|}{Colombia} & \multicolumn{1}{c|}{alex.acidjazz@gmail.com} \\ \cline{1-1} \cline{3-6} 
-\multicolumn{1}{c|}{} & \multicolumn{1}{c|}{} & \multicolumn{1}{c|}{Germán Puerta} & \multicolumn{1}{c|}{} & \multicolumn{1}{c|}{} & \multicolumn{1}{c|}{gpuerta@astropuerta.com.co} \\ \cline{3-6} 
-\multicolumn{1}{c|}{} & \multicolumn{1}{c|}{} & \multicolumn{1}{c|}{Juan Carlos Cuervo} & \multicolumn{1}{c|}{Universidad Sergio Arboleda} & \multicolumn{1}{c|}{Colombia} & \multicolumn{1}{c|}{observatorio@usa.edu.co} \\ \cline{3-6} 
-\multicolumn{1}{c|}{} & \multicolumn{1}{c|}{} & \multicolumn{1}{c|}{Enrique Torres} & \multicolumn{1}{c|}{Instituto Venezolano de Investigaciones Científicas (IVIC)} & \multicolumn{1}{c|}{Venezuela} & \multicolumn{1}{c|}{ejtt1010@gmail.com} \\ \cline{3-6} 
-\multicolumn{1}{c|}{} & \multicolumn{1}{c|}{} & \multicolumn{1}{c|}{Angela Pérez} & \multicolumn{1}{c|}{Parque Explora} & \multicolumn{1}{c|}{Colombia} & \multicolumn{1}{c|}{angela.perez@parqueexplora.org} \\ \cline{2-6} 
- &  &  &  &  &  \\ \hline
-\multicolumn{1}{|c|}{TF2} & \multicolumn{1}{c|}{\multirow{4}{*}{Annual TF2 meeting}} & \multicolumn{1}{c|}{Nicolas Vásquez} & \multicolumn{1}{c|}{Escuela Politécnica Nacional} & \multicolumn{1}{c|}{Ecuador} & \multicolumn{1}{c|}{nicolas.vasquez@epn.edu.ec} \\ \cline{1-1} \cline{3-6} 
-\multicolumn{1}{c|}{} & \multicolumn{1}{c|}{} & \multicolumn{1}{c|}{Enrique Torres} & \multicolumn{1}{c|}{Instituto Venezolano de Investigaciones Científicas (IVIC)} & \multicolumn{1}{c|}{Venezuela} & \multicolumn{1}{c|}{ejtt1010@gmail.com} \\ \cline{3-6} 
-\multicolumn{1}{c|}{} & \multicolumn{1}{c|}{} & \multicolumn{1}{c|}{Alexander Bonilla Rivera} & \multicolumn{1}{c|}{Planetario de Bogotá} & \multicolumn{1}{c|}{Colombia} & \multicolumn{1}{c|}{alex.acidjazz@gmail.com} \\ \cline{3-6} 
-\multicolumn{1}{c|}{} & \multicolumn{1}{c|}{} & \multicolumn{1}{c|}{Germán Puerta} & \multicolumn{1}{c|}{} & \multicolumn{1}{c|}{} & \multicolumn{1}{c|}{gpuerta@astropuerta.com.co}
-\\ \cline{2-6} 
-\end{tabular}
-}
-\caption{}
-\label{tab:my-table}
-\end{table}
-
-
-\newpage
-% Please add the following required packages to your document preamble:
-% \usepackage{multirow}
-\begin{table}[H]
-\resizebox{\linewidth}{!}{
-\begin{tabular}{cccccc}
-\hline
-Task Force & Tasks & Responsible & Institution & Country & Email \\ \hline
-\multicolumn{1}{|c|}{TF3} & \multicolumn{1}{c|}{\multirow{3}{*}{Communicating astronomy with the public}} & \multicolumn{1}{c|}{Alexander Bonilla Rivera} & \multicolumn{1}{c|}{Planetario de Bogotá} & \multicolumn{1}{c|}{Colombia} & \multicolumn{1}{c|}{alex.acidjazz@gmail.com} \\ \cline{1-1} \cline{3-6} 
-\multicolumn{1}{c|}{} & \multicolumn{1}{c|}{} & \multicolumn{1}{c|}{Germán Puerta} & \multicolumn{1}{c|}{} & \multicolumn{1}{c|}{} & \multicolumn{1}{c|}{gpuerta@astropuerta.com.co} \\ \cline{3-6} 
-\multicolumn{1}{c|}{} & \multicolumn{1}{c|}{} & \multicolumn{1}{c|}{Enrique Torres} & \multicolumn{1}{c|}{Instituto Venezolano de Investigaciones Científicas (IVIC)} & \multicolumn{1}{c|}{Venezuela} & \multicolumn{1}{c|}{ejtt1010@gmail.com} \\ \cline{2-6} 
- &  &  &  &  &  \\ \hline
-\multicolumn{1}{|c|}{TF3} & \multicolumn{1}{c|}{\multirow{7}{*}{Development for planetariums}} & \multicolumn{1}{c|}{Nicolas Vásquez} & \multicolumn{1}{c|}{Escuela Politécnica Nacional} & \multicolumn{1}{c|}{Ecuador} & \multicolumn{1}{c|}{nicolas.vasquez@epn.edu.ec} \\ \cline{1-1} \cline{3-6} 
-\multicolumn{1}{c|}{} & \multicolumn{1}{c|}{} & \multicolumn{1}{c|}{Luis Nuñez} & \multicolumn{1}{c|}{Universidad Industrial de Santander} & \multicolumn{1}{c|}{Colombia} & \multicolumn{1}{c|}{lnunez@uis.edu.co} \\ \cline{3-6} 
-\multicolumn{1}{c|}{} & \multicolumn{1}{c|}{} & \multicolumn{1}{c|}{Rocio Guzman Saavedra} & \multicolumn{1}{c|}{Universidad Mayor de San Simon} & \multicolumn{1}{c|}{Bolivia} & \multicolumn{1}{c|}{rocioguzman.s@fcyt.umss.edu.bo} \\ \cline{3-6} 
-\multicolumn{1}{c|}{} & \multicolumn{1}{c|}{} & \multicolumn{1}{c|}{Marko Andrade Uzieda} & \multicolumn{1}{c|}{Universidad de San Andrés} & \multicolumn{1}{c|}{} & \multicolumn{1}{c|}{markoandrade.u@fcyt.umss.edu.bo} \\ \cline{3-6} 
-\multicolumn{1}{c|}{} & \multicolumn{1}{c|}{} & \multicolumn{1}{c|}{Alexander Bonilla Rivera} & \multicolumn{1}{c|}{Planetario de Bogotá} & \multicolumn{1}{c|}{Colombia} & \multicolumn{1}{c|}{alex.acidjazz@gmail.com} \\ \cline{3-6} 
-\multicolumn{1}{c|}{} & \multicolumn{1}{c|}{} & \multicolumn{1}{c|}{Germán Puerta} & \multicolumn{1}{c|}{} & \multicolumn{1}{c|}{} & \multicolumn{1}{c|}{gpuerta@astropuerta.com.co} \\ \cline{3-6} 
-\multicolumn{1}{c|}{} & \multicolumn{1}{c|}{} & \multicolumn{1}{c|}{Enrique Torres} & \multicolumn{1}{c|}{Instituto Venezolano de Investigaciones Científicas (IVIC)} & \multicolumn{1}{c|}{Venezuela} & \multicolumn{1}{c|}{ejtt1010@gmail.com} \\ \cline{2-6} 
-\end{tabular}
-}
-\caption{}
-\label{tab:my-table}
-\end{table}
+\section{Conclusions}
