--- a/main.tex
+++ b/main.tex
@@ -125,7 +125,7 @@ Andean ROAD since 2014.
 \input{3TF2.tex}
 \input{4TF3.tex}
 \input{5TFX.tex}
-\input{6Venezuela.tex}
+%\input{6Venezuela.tex}
 %\input{7Summary.tex}
 
 
