--- a/3TF2.tex
+++ b/3TF2.tex
@@ -36,7 +36,7 @@ teachers and students.
 workshops on information technologies applied to astronomy and space
 sciences. 
 
-\subsubsection{Achievements}
+\subsubsection{Results}
 
 We held some meetings with the TF2 (Children and Schools) and TF3
 (Public Disclosure) working groups with representatives of the Andean
@@ -61,7 +61,7 @@ material to develop. Later on we will define the production and
 distribution processes. 
 
 
-\subsubsection{Achievements}
+\subsubsection{Results}
 
 %#######################################################
 
@@ -75,7 +75,7 @@ distribution processes.
 \\
 \textbf{Implementation:} Every year we will hold a meeting aimed at collaborators in the node. The venue will change every year. The first meeting will take place in 2015 with the theme Archeoastronomy.
 
-\subsubsection{Achievements}
+\subsubsection{Results}
 
 The project did not make any significant progress towards reaching its
 objective.
