--- a/4TF3.tex
+++ b/4TF3.tex
@@ -14,7 +14,7 @@
 These shows would be shared between the Local and Regional Networks of Planetariums, such as “Asociación de Planetarios
 del Cono Sur”, and the growing “Red de Planetarios de Colombia”.
 
-\subsubsection{Achievements}
+\subsubsection{Results}
 
 We only succeded to perform initial contacts.
 We did not manage to develop the special shows.
@@ -34,7 +34,7 @@ The National Polytechnic School in Quito had a initial approach with Planetarium
 held parallel to large professional meetings. We envision this event as a ”Communicating Astronomy with the Public” meeting for the region. We expect to hold the first one during the next Latin-American Regional IAU Meeting in 2016.
 
 
-\subsubsection{Achievements}
+\subsubsection{Results}
 We implemented a one-afternoon mini-worskshop during the Latin-American Regional IAU Meeting in 2016.
 Parque Explore hosted the Communicating Astronomy with the Public meeting in 2016. Colleagues from the Andean ROAD attended,
 but we did not manage to stablish a similar regular meeting for the Andean Region. 
