--- a/main.tex
+++ b/main.tex
@@ -88,23 +88,9 @@ A. P\'erez (Parque Explora, Colombia)} % Your name
 {\noindent{\Large Abstract} }\\
 
 The main goal of the Andean Regional Office of Astronomy for
-Development (ROAD) is serve to develop strategies to strengthen the
-professional research, education and popularization of astronomy in
-the Andean region. It will strengthen ongoing collaboration efforts,
-create channels of communication and develop new strategies to
-exchange knowledge and human resources in the region. 
-
-
-The tasks to achieve the proposed goal were classified in three task
-forces (TF); TF1: Universities and Research , TF2: Astronomy for Children
-and Schools and TF3: Astronomy for the Public . Different institutions
-from the countries that composed the Andean Region (Colombia,
-Venezuela, Ecuador, Perú, Bolivia and Chile) got engaged with these
-TFs. 
-
-
-This document collects the progress, results or difficulties of the
-Andean ROAD since 2014.  
+Development (Andean ROAD) is to develop strategies to strengthen the professional research, education and popularization of astronomy in the Andean region. 
+Different institutions from Colombia, Venezuela, Ecuador, Perú, Bolivia and Chile have been collaborating to reach that goal.
+This document summarizes the progress and challenges faced by the Andean ROAD since 2014 through 2020.  
 
 \end{abstract}
 
